Fixed a few Sonar warnings.